Changes for 3.4.12rc1

New features:

Bug fixes:
........S. [ZBX-12380] improved function parameter parsing for trigger functions (MVekslers)
..F....... [ZBX-13641] disabled preprocessing update for discovered items (vasilijs)
A......... [ZBX-13732] fixed status change for linked template items through parent template if host assigned (agriscenko)
..F....... [ZBX-14432] removed redundant code and improved performance in event details screen (miks)
........S. [ZBX-14410] improved error message handling in zbx_function_find() (MVekslers)
........S. [ZBX-14500] fixed crash when reporting unknown triggers and using $1-$9 macros at the same time (vso)
..F....... [ZBX-12104] added limit ZBX_HISTORY_PERIOD for {ITEM.VALUE} macro resolving in trigger name (gcalenko)
..F....... [ZBX-14402] fixed internal item parameter that does not match documentation (vasilijs)

--------------------------------------------------------------------------------
Changes for 3.4.11

New features:
A.F....... [ZBX-1357] added and enabled Norwegian translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated English (United States), French, Hebrew, Japanese, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.4.11rc1

Bug fixes:
...G...... [ZBX-6046] fixed the functions 'net.if.*' for Solaris with empty 64 bits counters (MVekslers)
A.F....... [ZBX-13355] fixed media type a required password field successfully passing validation while being empty and prevented auto-filling stored passwords by browser (Ivo)
.D........ [ZBX-14398] improved "Server" parameter description in Zabbix agent configuration file (vso)
.......PS. [ZBX-14447] reverted ZBX-13788 fix because of broken server-proxy compatibility between minor versions (wiper)