@@ -463,9 +463,14 @@ else {
 		$valuemapComboBox->addItem($valuemap['valuemapid'], CHtml::encode($valuemap['name']));
 	}
 }
-$link = (new CLink(_('show value mappings'), 'adm.valuemapping.php'))
-	->setAttribute('target', '_blank');
-$itemFormList->addRow(_('Show value'), [$valuemapComboBox, SPACE, $link], 'row_valuemap');
+
+if (CWebUser::getType() == USER_TYPE_SUPER_ADMIN) {
+	$valuemapComboBox = [$valuemapComboBox, '&nbsp;',
+		(new CLink(_('show value mappings'), 'adm.valuemapping.php'))->setAttribute('target', '_blank')
+	];
+}
+$itemFormList->addRow(_('Show value'), $valuemapComboBox, 'row_valuemap');
+
 $itemFormList->addRow(_('Allowed hosts'),
 	(new CTextBox('trapper_hosts', $data['trapper_hosts'], $discovered_item))->setWidth(ZBX_TEXTAREA_STANDARD_WIDTH),
 	'row_trapper_hosts');
